--- a/index.html
+++ b/index.html
@@ -266,34 +266,24 @@
         <div class="upload__column">
           <h3 class="upload__heading">Recipe data</h3>
           <label>Title</label>
-          <input value="FISH SOUP" required name="title" type="text" />
+          <input value="" required name="title" type="text" />
           <label>URL</label>
-          <input
-            value="https://github.com/DariaAleshina/"
-            required
-            name="sourceUrl"
-            type="text"
-          />
+          <input value="" required name="sourceUrl" type="text" />
           <label>Image URL</label>
-          <input
-            value="https://images.unsplash.com/photo-1621174438159-6a9a82405498?q=80&w=3029&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            required
-            name="image"
-            type="text"
-          />
+          <input value="" required name="image" type="text" />
           <label>Publisher</label>
-          <input value="Daria A." required name="publisher" type="text" />
+          <input value="" required name="publisher" type="text" />
           <label>Prep time</label>
-          <input value="60" required name="cookingTime" type="number" />
+          <input value="" required name="cookingTime" type="number" />
           <label>Servings</label>
-          <input value="2" required name="servings" type="number" />
+          <input value="" required name="servings" type="number" />
         </div>
 
         <div class="upload__column">
           <h3 class="upload__heading">Ingredients</h3>
           <label>Ingredient 1</label>
           <input
-            value="0.5,kg,shrimps"
+            value=""
             type="text"
             required
             name="ingredient-1"
@@ -301,27 +291,27 @@
           />
           <label>Ingredient 2</label>
           <input
-            value="3,,medium potatos"
+            value=""
             type="text"
             name="ingredient-2"
             placeholder="Format: 'Quantity,Unit,Description'"
           />
           <label>Ingredient 3</label>
           <input
-            value="2,,medium carrot"
+            value=""
             type="text"
             name="ingredient-3"
             placeholder="Format: 'Quantity,Unit,Description'"
           />
           <label>Ingredient 4</label>
           <input
-            type=",,salt"
+            type=""
             name="ingredient-4"
             placeholder="Format: 'Quantity,Unit,Description'"
           />
           <label>Ingredient 5</label>
           <input
-            type="2, tbsp , olive oil"
+            type=""
             name="ingredient-5"
             placeholder="Format: 'Quantity,Unit,Description'"
           />
