--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <button class="nav__btn nav__btn--add-recipe">
+              <button class="nav__btn nav__btn--add-recipe" type="button">
                 <!-- <svg class="nav__icon">
                   <use href="src/img/icons.svg#icon-edit"></use>
                 </svg> -->
