search results bar on mobile done

--- a/index.html
+++ b/index.html
@@ -118,6 +118,18 @@
       </header>
 
       <div class="search-results">
+        <!-- <button type="button" title="close search bar" class="btn-close-search">
+          <i class="bi bi-x"></i>
+        </button> -->
+        <div class="search-button-bar">
+          <button
+            type="button"
+            title="close search bar"
+            class="btn--close-search"
+          >
+            &times;
+          </button>
+        </div>
         <ul class="results">
           <!-- 
           <li class="preview">
