--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             type="text"
             class="search__field"
             placeholder="Search over 1,000,000 recipes..."
+            autofocus
           />
           <button class="btn search__btn">
             <!-- <svg class="search__icon">
@@ -41,7 +42,7 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <button class="nav__btn nav__btn--add-recipe">
+              <button class="nav__btn nav__btn--add-recipe" type="button">
                 <!-- <svg class="nav__icon">
                   <use href="src/img/icons.svg#icon-edit"></use>
                 </svg> -->
@@ -83,7 +84,7 @@
                 </svg>
                 <span>Bookmarks</span>
               </button>
-              <div class="bookmarks">
+              <div class="bookmarks hidden">
                 <ul class="bookmarks__list">
                   <div class="message">
                     <div>
@@ -117,6 +118,18 @@
       </header>
 
       <div class="search-results">
+        <!-- <button type="button" title="close search bar" class="btn-close-search">
+          <i class="bi bi-x"></i>
+        </button> -->
+        <div class="search-button-bar">
+          <button
+            type="button"
+            title="close search bar"
+            class="btn--close-search"
+          >
+            &times;
+          </button>
+        </div>
         <ul class="results">
           <!-- 
           <li class="preview">
