meta tags - open graph added for previews

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Forkify | Recipe App" />
+    <meta
+      property="og:description"
+      content="Search over 1,000,000 recipes... Bookmark or upload your own recipes."
+    />
+    <meta property="og:image" content="src/img/forkify-preview.png" />
+    <meta
+      property="og:url"
+      content="https://forkify-recipe-app-daria-aleshina.netlify.app"
+    />
+    <meta property="og:type" content="website" />
     <link
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
