meta tags: new descr added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="Forkify | Recipe App" />
+    <meta
+      property="og:title"
+      content="	forkify // Search over 1,000,000 recipes"
+    />
     <meta
       property="og:description"
-      content="Search over 1,000,000 recipes... Bookmark or upload your own recipes."
+      content="Discover recipes or add your own with easy-to-use app. Adjust servings, save favorites, and follow instructions on any device."
     />
     <meta property="og:image" content="src/img/forkify-preview.png" />
     <meta
