--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       property="og:description"
       content="Discover recipes or add your own with easy-to-use app. Adjust servings, save favorites, and follow instructions on any device."
     />
-    <meta property="og:image" content="public/forkify-preview.png" />
+    <meta
+      property="og:image"
+      content="https://forkify-recipe-app-daria-aleshina.netlify.app/public/forkify-preview.png"
+    />
     <meta
       property="og:url"
       content="https://forkify-recipe-app-daria-aleshina.netlify.app"
